--- a/templates/res.html
+++ b/templates/res.html
@@ -2,8 +2,10 @@
 <html>
 
 <body>
-    <h2>{{res.status_code}}</h2>
-    <a href="/">Back</a>
+    <h4>{{res.status_code}}</h4>
+    <h5>{{res.reason}}</h5>
+    <h5>{{res.text}}</h5>
+    <a href="/">Go back</a>
 </body>
 
 </html>
