--- a/templates/res.html
+++ b/templates/res.html
@@ -2,9 +2,13 @@
 <html>
 
 <body>
-    <h4>{{res.status_code}}</h4>
-    <h5>{{res.reason}}</h5>
-    <h5>{{res.text}}</h5>
+    <h4>STATUSCODE: {{res.status_code}}</h4>
+    <h5>REASON: {{res.reason}}</h5>
+    <h5>TEXT: {{res.text}}</h5>
+    <h5>JSON SENT:</h5>
+    <pre>
+        {{str}}
+    </pre>
     <a href="/">Go back</a>
 </body>
 
